renamed diarrhea to diarrhoea on display

--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -322,7 +322,7 @@
     <item><label>Genital Discharge / Abdominal Pain</label><value>dischg_abdom_pain</value></item>
     <item><label>Mouth / Throat Problem</label><value>mouth_throat</value></item>
 	<item><label>Fever</label><value>fever</value></item>
-	<item><label>Dehydration / Diarrhea</label><value>dehydrat_diarrhea</value></item>
+	<item><label>Dehydration / Diarrhoea</label><value>dehydrat_diarrhea</value></item>
     <item><label>Other</label><value>other</value></item>
 	<hint> Select all assessments conducted on the patient </hint>
   </select>
@@ -396,13 +396,13 @@
   </select>
 
   <select ref="assessment/dehydration_diarrhea">
-    <label>Select Symptoms of Dehydration / Diarrhea</label>
+    <label>Select Symptoms of Dehydration / Diarrhoea</label>
     <item><label>SEVERE: severe dehydration</label><value>sev_dehydration</value></item>
     <item><label>MODERATE: some dyhdration</label><value>mod_some_dehydration</value></item>
-    <item><label>MODERATE: diarrhea &gt; 14 days</label><value>mod_diarrhea</value></item>
+    <item><label>MODERATE: diarrhoea &gt; 14 days</label><value>mod_diarrhea</value></item>
     <item><label>MODERATE: blood in stool</label><value>mod_blood_in_stool</value></item>
 	<item><label>MILD: no dehydraion</label><value>mild_no_dehydration</value></item>
-	<hint> Select all  Deyhdration / Diarrhea symptoms found on the patient </hint>
+	<hint> Select all  Deyhdration / diarrhoea symptoms found on the patient </hint>
   </select>
   
   <select ref="investigations/categories">
@@ -552,7 +552,7 @@
     <item><label>Malaria</label><value>malaria</value></item>
     <item><label>RTI: Non Pneumonia</label><value>rti_non_pneumonia</value></item>
 	<item><label>RTI: Pneumonia</label><value>rti_pneumonia</value></item>
-    <item><label>Diarrhea</label><value>diarrhea</value></item>
+    <item><label>Diarrhoea</label><value>diarrhea</value></item>
     <item><label>Skin infection</label><value>skin_infection</value></item>
     <item><label>Trauma / accident</label><value>trauma_accident</value></item>
     <item><label>Ear / Nose /Throat infection</label><value>ear_nose_throat</value></item>
