--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -350,7 +350,7 @@
     <item><label>SEVERE: SBP &lt;= 100</label><value>sev_sbp</value></item>
     <item><label>SEVERE: respiratory rate &gt;= 24</label><value>sev_resp_rate</value></item>
     <item><label>SEVERE: HR &gt;= 100 bpm</label><value>sev_hr</value></item>
-	<item><label>SEVERE: diarrhea</label><value>sev_diarrhea</value></item>
+	<item><label>SEVERE: diarrhoea</label><value>sev_diarrhea</value></item>
     <item><label>SEVERE: Hgb &lt;= 8 g/dL</label><value>sev_hgb</value></item>
     <item><label>SEVERE: body aches/joint pain</label><value>sev_pain</value></item>
     <item><label>SEVERE: nausea/vomiting</label><value>sev_nausea</value></item>
