--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -365,7 +365,7 @@
   <select ref="assessment/categories">
     <label>Describe the Patient's Assessment</label>
     <item><label>Cough / Difficulty Breathing</label><value>resp</value></item>
-    <item><label>Dehydration / Diarrhea</label><value>diarrhea</value></item>
+    <item><label>Dehydration / Diarrhoea</label><value>diarrhea</value></item>
     <item><label>Fever</label><value>fever</value></item>
     <item><label>Ear Problem</label><value>ear</value></item>
     <item><label>Malnutrition / Low Weight</label><value>malnutrition</value></item>
@@ -382,10 +382,10 @@
   </select>
 
   <select ref="assessment/diarrhea">
-    <label>Select Symptoms of Diarrhea</label>
+    <label>Select Symptoms of Diarrhoea</label>
     <item><label>SEVERE: severe dehydration</label><value>sev_dehyd</value></item>
     <item><label>MODERATE: some dehydration</label><value>mod_dehyd</value></item>
-    <item><label>MODERATE: diarrhea &gt; 14 days</label><value>mod_two_weeks</value></item>
+    <item><label>MODERATE: diarrhoea &gt; 14 days</label><value>mod_two_weeks</value></item>
     <item><label>MODERATE: blood in stool</label><value>mod_blood_in_stool</value></item>
     <item><label>MILD: no dehyrdation</label><value>mild_no_dehyd</value></item>
   </select>
@@ -573,7 +573,7 @@
     <item><label>Malaria</label><value>malaria</value></item> 
     <item><label>RTI:Non-pneumonia</label><value>rti_non_pneumonia</value></item>
 	<item><label>RTI:Pneumonia</label><value>rti_pneumonia</value></item>
-    <item><label>Diarrhea:Non bloody</label><value>diarrhea_non_bloody</value></item>
+    <item><label>Diarrhoea:Non bloody</label><value>diarrhea_non_bloody</value></item>
     <item><label>Dysentry</label><value>dysentry</value></item>
     <item><label>Eye Infection</label><value>eye_infection</value></item>
     <item><label>Skin Infection</label><value>skin_infection</value></item>
