add customized repeat captions for drugs on bhoma forms

--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -510,6 +510,13 @@
   <group>
   <label>Prescribed Drug</label>
   <repeat nodeset="drugs/prescribed/med">
+    <jr:chooseCaption><output value="$i" />. <output value="if(drug_prescribed, prettify-drug(drug_prescribed), '(no drug selected)')" /></jr:chooseCaption>
+    <jr:mainHeader>Describe Prescription:</jr:mainHeader>
+    <jr:addCaption>Add another <output value="$name" /></jr:addCaption>
+    <jr:addEmptyCaption>Add a <output value="$name" /></jr:addEmptyCaption>
+    <jr:doneCaption>No more drugs to enter; Next question</jr:doneCaption>
+    <jr:doneEmptyCaption>No drugs to enter; Skip question</jr:doneEmptyCaption>
+    <jr:delCaption>Remove a <output value="$name" /></jr:delCaption>
 
     <select1 ref="drug_drill_down">
 		<label>Select First Letter of Prescribed Drug Name</label>
@@ -654,8 +661,15 @@
   </select1>
 
   <group>
-  <label>Dispensed Drug</label>
+  <label>Dispensed/Substituted Drug</label>
   <repeat nodeset="drugs/dispensed/med">
+    <jr:chooseCaption><output value="$i" />. <output value="if(drug_dispensed, prettify-drug(drug_dispensed), '(no drug selected)')" /></jr:chooseCaption>
+    <jr:mainHeader>Describe drugs dispensed and not on prescription:</jr:mainHeader>
+    <jr:addCaption>Add another <output value="$name" /></jr:addCaption>
+    <jr:addEmptyCaption>Add a <output value="$name" /></jr:addEmptyCaption>
+    <jr:doneCaption>No more drugs to enter; Next question</jr:doneCaption>
+    <jr:doneEmptyCaption>No drugs to enter; Skip question</jr:doneEmptyCaption>
+    <jr:delCaption>Remove a <output value="$name" /></jr:delCaption>
 
     <select1 ref="drug_drill_down">
 		<label>Select First Letter of Dispensed Drug Name</label>
