--- a/bhoma/mobile/bhoma-mobile/bhoma_monthly_chw_survey.xhtml
+++ b/bhoma/mobile/bhoma-mobile/bhoma_monthly_chw_survey.xhtml
@@ -56,7 +56,7 @@
     <bind nodeset="Meta/TimeEnd" type="dateTime" jr:preload="timestamp" jr:preloadParams="end" />
     <bind nodeset="Meta/uid" type="xsd:string" jr:preload="uid" jr:preloadParams="general" />
 	<bind nodeset="Meta/version" jr:preload="meta" jr:preloadParams="AppVersion" />
-    <bind nodeset="Meta/clinic_id" jr:preload="meta" jr:preloadParams="clinic_id" />
+    <bind nodeset="Meta/clinic_id" jr:preload="user" jr:preloadParams="clinic_id" />
     
 	<bind nodeset="num_people_in_hh" required="true()" type="int" constraint=". &lt; 500" jr:constraintMsg="Enter a value less than 500"/>
 	<bind nodeset="visit_length" required="true()" type="int" constraint=". &lt; 400" jr:constraintMsg="Enter a value less than 400"/>
