updates to sick preg for rev2 temp commit

--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -547,7 +547,7 @@
   </select>
 
   <select ref="secondary_diagnosis">
-    <label>Select the Secondary Diagnoses</label>
+    <label>Select the Secondary Diagnoses (can be multiple)</label>
     <item><label>RTI:Non-pneumonia</label><value>rti_non_pneumonia</value></item>
 	<item><label>RTI:Pneumonia</label><value>rti_pneumonia</value></item>
     <item><label>Other Chest Condition</label><value>other_chest_cond</value></item>
